[project]
name = "veylor-pager"
version = "0.1.0"
description = "A central communication hub | notification broker"
authors = [{ name = "Ihor Savenko", email = "contact@ihorsavenko.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
